--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </header>
 
   <!-- SECTION -->
-  <main id="router-view">
+  <main class="bg-dark text-dark" id="router-view">
     <!-- PRIMARY VIEWPORT -->
 
   </main>
